change container port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - '3029:3000'
-      - '5529:5555'
-    volumes:
-      - ./realDb:/app/realDb
-      - ./uploads:/app/uploads
+      - '3032:3000'
+      # - '5529:5555'
+    # volumes:
+    #   - ./realDb:/app/realDb
+    #   - ./uploads:/app/uploads
     command: "npm run start"
     restart: always
