--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.15.0",
     "jotai": "^2.12.5",
+    "lightgallery": "^2.9.0-beta.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
     "react": "^19.0.0",
