--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@schedule-x/event-modal": "^2.33.0",
     "@schedule-x/react": "^2.33.0",
     "@schedule-x/theme-default": "^2.33.0",
+    "@tiptap/pm": "^3.0.9",
+    "@tiptap/react": "^3.0.9",
+    "@tiptap/starter-kit": "^3.0.9",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
