--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@schedule-x/event-modal": "^2.33.0",
     "@schedule-x/react": "^2.33.0",
     "@schedule-x/theme-default": "^2.33.0",
+    "@tiptap/extension-highlight": "^3.1.0",
+    "@tiptap/extension-text-align": "^3.1.0",
     "@tiptap/pm": "^3.0.9",
     "@tiptap/react": "^3.0.9",
     "@tiptap/starter-kit": "^3.0.9",
