--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.15.0",
-    "jotai": "^2.12.5",
+    "jotai": "^2.13.1",
     "lightgallery": "^2.9.0-beta.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.6.0",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.0"
   },
