--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@schedule-x/event-modal": "^2.33.0",
-    "@schedule-x/react": "^2.33.0",
-    "@schedule-x/theme-default": "^2.33.0",
+    "@schedule-x/calendar": "^2.36.0",
+    "@schedule-x/event-modal": "^2.36.0",
+    "@schedule-x/react": "^2.36.0",
+    "@schedule-x/theme-default": "^2.36.0",
     "@tiptap/extension-highlight": "^3.1.0",
     "@tiptap/extension-text-align": "^3.1.0",
     "@tiptap/pm": "^3.0.9",
