--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "jotai": "^2.13.1",
     "lightgallery": "^2.9.0-beta.1",
     "lucide-react": "^0.511.0",
-    "next": "15.3.3",
+    "next": "^15.5.6",
+    "next-nprogress-bar": "^2.4.7",
+    "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.0.0",
