--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "framer-motion": "^12.15.0",
     "jotai": "^2.13.1",
     "lightgallery": "^2.9.0-beta.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "next": "^15.5.6",
     "next-nprogress-bar": "^2.4.7",
