--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tiptap/react": "^3.0.9",
     "@tiptap/starter-kit": "^3.0.9",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -43,6 +44,7 @@
     "lightgallery": "^2.9.0-beta.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
+    "nanoid": "^5.1.6",
     "next": "^15.5.6",
     "next-nprogress-bar": "^2.4.7",
     "nprogress": "^0.2.0",
