--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@schedule-x/calendar": "^2.36.0",
     "@schedule-x/event-modal": "^2.36.0",
+    "@schedule-x/events-service": "^3.4.2",
     "@schedule-x/react": "^2.36.0",
     "@schedule-x/theme-default": "^2.36.0",
     "@tiptap/extension-highlight": "^3.1.0",
